Remove to Watchlist funktion gemacht
